mobile overflow fix etc

--- a/src/scss/desktop/mask.scss
+++ b/src/scss/desktop/mask.scss
@@ -12,6 +12,7 @@
   height: 100vh;
   filter: blur(0);
   transition: filter 75ms linear;
+  overflow: hidden;
 
   &.show {
     filter: blur(10px);
